language_detection_app/benchmarker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: benchmarker
spec:
  containers:
  - name: wrk
    image: williamyeh/wrk
    command: ["sleep", "100000"]
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        cpu: "2"
        memory: "1Gi"
