language_detection_app/k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # SECURITY UPDATE: Changed from NodePort to ClusterIP
  # This ensures traffic can ONLY come from the Ingress Controller
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
